--- a/app/src/main/res/layout/books_preview_fragment.xml
+++ b/app/src/main/res/layout/books_preview_fragment.xml
@@ -11,6 +11,8 @@
         android:id="@+id/books_preview_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        tools:listitem="@layout/item_book_preview"
+        tools:itemCount="3"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
